--- a/SharpChannels.Core/SharpChannels.Core.csproj
+++ b/SharpChannels.Core/SharpChannels.Core.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Channels\ProtocolErrorCode.cs" />
     <Compile Include="Channels\ProtocolException.cs" />
     <Compile Include="Channels\ChannelSettings.cs" />
-    <Compile Include="Channels\ErrorCreatingChannelEventArgs.cs" />
+    <Compile Include="Channels\ExceptionEventArgs.cs" />
     <Compile Include="Channels\Tcp\TcpChannelAwaiter[TMessage].cs" />
     <Compile Include="Channels\Tcp\TcpChannel[TMessage].cs" />
     <Compile Include="Channels\Tcp\TcpConnectionSettings.cs" />
