--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.10.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.10\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -47,6 +55,7 @@
     <Compile Include="Channels\Intradomain\IntradomainChannelAwaiterShould.cs" />
     <Compile Include="Channels\Intradomain\IntradomainChannelShould.cs" />
     <Compile Include="Channels\Intradomain\IntradomainConnectionManagerShould.cs" />
+    <Compile Include="Communication\RequesterShould.cs" />
     <Compile Include="Serialization\CompoundSerializerShould.cs" />
     <Compile Include="Serialization\EndsessionSerializerShould.cs" />
     <Compile Include="Serialization\HandshakeRequestSerializerShould.cs" />
