message format now doesn't depend on endianness

--- a/SharpChannels.Core/SharpChannels.Core.csproj
+++ b/SharpChannels.Core/SharpChannels.Core.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Contracts\Enforce.cs" />
     <Compile Include="IntradomainCommunication.cs" />
     <Compile Include="Messages\PubSub\SubscribeMessage.cs" />
+    <Compile Include="Serialization\Endianness.cs" />
     <Compile Include="Serialization\PubSub\SubscribeMessageSerializer.cs" />
     <Compile Include="TcpCommunication.cs" />
     <Compile Include="ICommunication.cs" />
