--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tests</RootNamespace>
     <AssemblyName>Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -69,11 +70,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpChannels.Core\SharpChannels.Core.csproj">
-      <Project>{3A58294D-07FA-4D64-82FD-21F873B4863B}</Project>
+      <Project>{e1322cd5-6ecb-4b87-bc65-f663b2a7d8f6}</Project>
       <Name>SharpChannels.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
